--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "create-spreadsheet.js",
   "dependencies": {
+    "async": "^2.1.4",
     "google-spreadsheet": "^2.0.3",
-    "mysql": "^2.12.0"
+    "mysql": "^2.12.0",
+    "node-fetch": "^1.6.3"
   },
   "devDependencies": {},
   "scripts": {
